<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/value_5dp"
        android:layout_marginRight="@dimen/value_5dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/crossImgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="@dimen/value_15dp"
            android:src="@drawable/ic_cross" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started_heading"
            android:textSize="@dimen/value_25sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/value_30dp"
            android:textColor="@color/connect_text_color" />

        <ImageView
            android:id="@+id/navHeaderImgView"
            android:layout_width="@dimen/header_view_logo_width"
            android:layout_height="100dp"
            android:src="@drawable/app_inside_logo"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_personal_info"
            android:textSize="@dimen/value_16sp"
            android:layout_marginTop="@dimen/value_30dp"
            android:textColor="@color/connect_text_color" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/client_row_color"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/value_5dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/value_16sp"
                        android:hint="@string/text_person_name"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/value_16sp"
                        android:hint="@string/text_person_email"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEtWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etWebsite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:textSize="@dimen/value_16sp"
                        android:hint="@string/text_person_website"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_project_info"
            android:textSize="@dimen/value_16sp"
            android:layout_marginTop="@dimen/value_30dp"
            android:textColor="@color/connect_text_color" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/client_row_color"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/value_5dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEtProjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etProjectName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/value_16sp"
                        android:hint="@string/text_company_name"/>

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/categoryTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Select Category"
                        android:padding="@dimen/value_10dp"
                        android:clickable="true"
                        android:textSize="@dimen/value_16sp"/>

                    <com.audacityit.audacity.util.TagGroup
                        android:id="@+id/tagOptions"
                        style="@style/TagGroup.Small.Multiline"
                        android:layout_centerInParent="true" />


                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/black"
                    android:layout_marginLeft="@dimen/value_5dp"
                    android:layout_marginRight="@dimen/value_5dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.widget.ScrollView>